asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__push__open_push_menu_after_dash_input.snap
---
source: asyncgit/src/lib/tui/git/tests/push.rs
assertion_line: 85
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 1 commit.                             |
                                                                                |
 Recent commits                                                                 |
 e7eb2bd main add new-file                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Push                            Arguments                                       |
p pushRemote, setting that      -n Dry run (--dry-run)                          |
u to origin/main                -F Force (--force)                              |
e to elsewhere                  -f Force with lease (--force-with-lease)        |
q/<esc> Quit/Close              -h Disable hooks (--no-verify)                  |
styles_hash: 9707ae3534644d0c
