asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__push__push_menu_existing_push_remote_and_upstream.snap
---
source: asyncgit/src/lib/tui/git/tests/push.rs
assertion_line: 17
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Push                    Arguments                                               |
p to origin             -n Dry run (--dry-run)                                  |
u to origin/main        -F Force (--force)                                      |
e to elsewhere          -f Force with lease (--force-with-lease)                |
q/<esc> Quit/Close      -h Disable hooks (--no-verify)                          |
styles_hash: b0f9b30d052cdc2e
