asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__push__push_menu_no_remote_or_upstream_set.snap
---
source: asyncgit/src/lib/tui/git/tests/push.rs
assertion_line: 7
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Push                            Arguments                                       |
p pushRemote, setting that      -n Dry run (--dry-run)                          |
u upstream, setting that        -F Force (--force)                              |
e to elsewhere                  -f Force with lease (--force-with-lease)        |
q/<esc> Quit/Close              -h Disable hooks (--no-verify)                  |
styles_hash: 97c38ee7b4dd67be
