asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__push__push_setup_upstream_same_as_head.snap
---
source: asyncgit/src/lib/tui/git/tests/push.rs
assertion_line: 65
expression: ctx.redact_buffer()
---
▌On branch new-branch                                                           |
                                                                                |
 Recent commits                                                                 |
 e7eb2bd new-branch add new-file                                                |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Push                            Arguments                                       |
p pushRemote, setting that      -n Dry run (--dry-run)                          |
u upstream, setting that        -F Force (--force)                              |
e to elsewhere                  -f Force with lease (--force-with-lease)        |
q/<esc> Quit/Close              -h Disable hooks (--no-verify)                  |
────────────────────────────────────────────────────────────────────────────────|
$ git branch --set-upstream-to new-branch                                       |
warning: not setting branch 'new-branch' as its own upstream                    |
styles_hash: b60340121bd76ccb
